deploy/vendure-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vendure-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3001
  selector:
    app: vendure
