deploy/nginx-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(?:admin|admin-api|shop-api|mailbox|assets|health)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: vendure-service
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storefront-service
            port:
              number: 3000
